[tool.pyprojectx]
main = ["pdm"]

[tool.pdm]
distribution = true

[project]
name = "test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "detachhead", email = "detachhead@users.noreply.github.com"},
]
dependencies = [
    "nodejs-wheel-binaries>=20.15.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
