[tool.pyprojectx]
main = ["pdm==2.16.0"]

[tool.pdm]
distribution = true

[project]
name = "test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "detachhead", email = "detachhead@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
