[project]
name = "asdf"
version = "4.2.2"
authors = [
    { name = "DetachHead", email = "detachhead@users.noreply.github.com" },
]
dependencies = [
    "pytest==8.0",
    "robotframework<8.0.0,>=6.1",
    "basedtyping<0.2,>=0.1.0",
    "ansi2html>=1.9.1",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = { text = "MIT" }

[tool.pyprojectx]
pdm = "pdm==2.16.0"


[tool.pdm.dev-dependencies]
lint = [
    "basedpyright>=1.10.1",
    "pylint>=3.2.0",
    "ruff>=0.2.0",
    "robotframework-robocop>=4.1.0",
    "robotframework-tidy>=4.5.0",
]
test = [
    "lxml>=4.9.3",
    "lxml-stubs>=0.4.0",
    "pytest-xdist>=3.5.0",
    "pytest-github-actions-annotate-failures>=0.2.0",
]
docs = ["pdoc>=14.1.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"